--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -40,6 +40,7 @@ RUN apt-get update && apt-get install -y \
     iputils-ping \
     busybox \
     xclip \
+    ripgrep \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copy Docker CLI and Docker Compose plugin from docker:dind image
