--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -6,7 +6,7 @@ ARG DOCKER_VERSION="27.2.1"
 ARG NEOVIM_VERSION="0.10.1"
 ARG LAZYGIT_VERSION="0.44.0"
 ARG NODE_VERSION="22.8.0" # Used to install DEVCONTAINER-CLI
-
+ARG K9S_VERSION="0.32.7"
 
 # DOCKER
 # ====================
@@ -25,6 +25,7 @@ FROM ubuntu:24.04
 ARG DOCKER_VERSION
 ARG NEOVIM_VERSION
 ARG LAZYGIT_VERSION
+ARG K9S_VERSION
 
 # Install essential tools, Docker CLI, and other dependencies
 RUN apt-get update && apt-get install -y \
@@ -63,6 +64,11 @@ RUN curl -Lo nvim.appimage https://github.com/neovim/neovim/releases/download/v$
     && mv squashfs-root /usr/local/nvim \
     && ln -s /usr/local/nvim/AppRun /usr/local/bin/nvim \
     && rm -f nvim.appimage
+
+# Install K9S
+RUN wget https://github.com/derailed/k9s/releases/download/v${K9S_VERSION}/k9s_linux_amd64.deb \
+    && apt install ./k9s_linux_amd64.deb \
+    && rm k9s_linux_amd64.deb
 
 # Copy devcontainer-cli binaries
 COPY --from=devcontainercli-builder /usr/local/bin/node /usr/local/bin/node
