--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -41,6 +41,7 @@ RUN apt-get update && apt-get install -y \
     iputils-ping \
     busybox \
     ripgrep \
+    fzf \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copy Docker CLI and Docker Compose plugin from docker:dind image
@@ -68,6 +69,11 @@ RUN curl -Lo nvim.appimage https://github.com/neovim/neovim/releases/download/v$
 RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" \
     && chmod +x kubectl \
     && mv kubectl /usr/local/bin/
+
+# Install kubectx and kubens
+RUN git clone https://github.com/ahmetb/kubectx /opt/kubectx \
+    && ln -s /opt/kubectx/kubectx /usr/local/bin/kubectx \
+    && ln -s /opt/kubectx/kubens /usr/local/bin/kubens
 
 # Install helm
 RUN curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 \
