--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       context: .
       args:
         SESSION_TYPE: ${XDG_SESSION_TYPE}
+        VERSION: latest
     user: ${UID}:${GID}
     group_add:
       - ${DOCKER_GID}
