--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -42,6 +42,8 @@ RUN apt-get update && apt-get install -y \
     busybox \
     ripgrep \
     fzf \
+    xclip \
+    wl-clipboard \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copy Docker CLI and Docker Compose plugin from docker:dind image
